--- a/old2/reference.css
+++ b/old2/reference.css
@@ -438,22 +438,31 @@ span{
     display: flex;
     justify-content: center;
     gap: 1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
+}
+
+.filter-btn {
+    padding: 0.8rem 1.6rem;
+    background: var(--second-bg-color);
+    color: var(--text-color);
+    border-radius: 1rem;
+    border: .1rem solid var(--bg-color);
+    cursor: pointer;
+    transition: .3s ease;
+}
+
+.filter-btn:hover {
+    background: var(--main-color);
+    color: var(--second-bg-color);
 }
 
 .portfolio-description {
     font-size: 1.6rem;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 1rem;
     font-weight: bold;
     text-shadow: white 1px 0 10px;
 }
-
-#portfolioVideo {
-    border-radius: 10   px; /* Állítsd be a kívánt értéket a kerekítés mértékére */
-    overflow: hidden; /* Eltünteti a lekerekített részeken kívüli tartalmat */
-}
-
 
 .card {
     background:rgba(0, 0, 0, .2);
@@ -462,9 +471,7 @@ span{
     transition: transform 0.7s;
     width: 300px;
     height: 500px;
-    /*3d transform */
-    position: relative; /* Az abszolút pozicionálás miatt szükséges */
-    perspective: 1000px; /* Elmélyíti a 3D-s hatást */
+    transform-style: preserve-3d; /* 3D hatás engedélyezése */
 }
 
 .cards-container {
@@ -506,22 +513,14 @@ span{
     transform: rotateY(1deg) scale(1.05); /* Forgatás és kicsinyítés */
 }
 
-/*.card:hover .card-title {
+.card:hover .card-title {
     animation: glow 10.5s infinite;
-}*/
-
-.card:hover .card-content {
-    transform: rotateY(0deg); /* Visszaáll a normál állapotba a hover alatt */
 }
-
 
 .card-content {
     padding: 30px;
     padding-right: 8px;
     text-align: center;
-    /* 3D transzformáció */
-    transition: transform 0.2s ease;
-    transform-style: preserve-3d;
 }
 
 .card-image {
@@ -554,17 +553,6 @@ span{
     font-size: 18px;
     font-weight: bold;
     color: #e67e22;
-}
-
-.card-price-caution{
-    margin-top: 12px; /* Kisebb hely minden sor között */
-    font-size: 15px;
-    color: white;
-    font-style: oblique;
-    font-family: Arial, Helvetica, sans-serif;   
-    opacity: 10%;
-    justify-content: center;
-    align-items: center;
 }
 
 #card-image3{
@@ -615,21 +603,4 @@ span{
     color: #007BFF; /* Változtathatod a színt a kívánt kiemeléshez */
     transform: scale3d(1.1, 1.1, 1.1);
     transition: transform 0.3s;
-    position: 50%;
-    transform: translateY(-10px); /* Emeli a címet felfelé */
-}
-
-.filter-btn {
-    padding: 0.8rem 1.6rem;
-    background: var(--second-bg-color);
-    color: var(--text-color);
-    border-radius: 10rem;
-    border: .1rem solid var(--bg-color);
-    cursor: pointer;
-    transition: .3s ease;
-}
-
-.filter-btn:hover {
-    background: var(--main-color);
-    color: var(--second-bg-color);
 }
