--- a/reference.css
+++ b/reference.css
@@ -517,10 +517,10 @@ span{
 
 .card-description li {
     margin-bottom: 8px; /* Kisebb hely minden sor között */
-    font-size: 16px;
+    font-size: 17px;
     color: #555;
     font-style: oblique;
-    font-family: kanit;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .card-price {
