--- a/reference.css
+++ b/reference.css
@@ -139,6 +139,22 @@ span{
     transition: .5s ease;
 }
 
+.contact-content .social-media a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 10rem;
+    background: transparent;
+    border: 0.2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 5rem;
+    color: var(--main-color);
+    margin: 3rem 5.5rem 3rem 0;
+    transition: .5s ease;
+    animation: floatImage 4s ease-in-out infinite;
+}
+
 .social-media a:hover{
     background-color: var(--main-color);
     color: var(--second-bg-color);
@@ -246,6 +262,18 @@ span{
     min-height: 100vh;
 }
 
+.contact-content {
+    display: flex;
+    flex-direction: row; /* Sorba rendezés */
+    justify-content: center; /* Középre igazítás vízszintesen */
+    flex-wrap: wrap; /* Gombok átrendezése, ha nem férnek ki egy sorban */
+    gap: 10px; /* Gombok közötti távolság */
+    padding-left: 50px;
+}
+
+.contact-content .btn {
+    margin: 10px; /* Egyenlő távolságok a gombok körül */
+}
 .footer{
     display: flex;
     justify-content: space-between;
